Update chec-tab component with latest designs

--- a/src/stories/components/ChecTab.stories.mdx
+++ b/src/stories/components/ChecTab.stories.mdx
@@ -24,18 +24,27 @@ import ChecTab from '../../components/ChecTab.vue';
         },
         label: {
           default: text('Tab label', 'Tab label'),
+        },
+        dark: {
+          default: boolean('Dark', false),
+        },
+      },
+      computed: {
+        background() {
+          return `bg-gray-${this.dark ? '700' : '100'}`;
         }
       },
       methods: {
         click(tab) {
           action(`Clicked tab "${tab}"`)();
-        }
+        },
       },
       template: `
-        <div class="flex justify-center font-lato mx-auto max-w-lg py-6 bg-gray-100">
+        <div class="mt-4 flex justify-center font-lato mx-auto max-w-lg py-6" :class="background">
           <ChecTab
             :disabled="disabled"
             :active="active"
+            :dark="dark"
             @click="click('Tab clicked')""
           >
             {{ label }}
@@ -51,15 +60,25 @@ import ChecTab from '../../components/ChecTab.vue';
       components: {
         ChecTab,
       },
+      props: {
+        dark: {
+          default: boolean('Dark', false),
+        },
+      },
+      computed: {
+        background() {
+          return `bg-gray-${this.dark ? '700' : '100'}`;
+        }
+      },
       data() {
         return { active: 2 }
       },
       template: `
-        <div class="flex justify-center font-lato mx-auto p-16 bg-gray-100">
-          <ChecTab @click="active = 1" :active="active === 1">Tab one</ChecTab>
-          <ChecTab @click="active = 2" :active="active === 2">Tab two</ChecTab>
-          <ChecTab @click="active = 3" disabled :active="active === 3">Tab three</ChecTab>
-          <ChecTab @click="active = 4" :active="active === 4">Tab four</ChecTab>
+        <div class="flex justify-center font-lato mx-auto p-16" :class="background">
+          <ChecTab @click="active = 1" :dark="dark" :active="active === 1">Tab one</ChecTab>
+          <ChecTab @click="active = 2" :dark="dark" :active="active === 2">Tab two</ChecTab>
+          <ChecTab @click="active = 3" :dark="dark" disabled :active="active === 3">Tab three</ChecTab>
+          <ChecTab @click="active = 4" :dark="dark" :active="active === 4">Tab four</ChecTab>
         </div>`
     }}
   </Story>
