Adding bnack currency slect in story

--- a/src/stories/components/TextField.stories.mdx
+++ b/src/stories/components/TextField.stories.mdx
@@ -446,7 +446,7 @@ import { uiIcons } from '../../lib/icons';
             :variant="variant"
             :currency="currency"
             v-model="inputValue"
-            :currencySymbol="'CHF'"
+            :currencySymbol="currencySymbol"
           />
         </div>`,
     }}
