adding table prepend component

--- a/src/stories/styles/tables.stories.mdx
+++ b/src/stories/styles/tables.stories.mdx
@@ -1,4 +1,7 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
+import { action } from "@storybook/addon-actions";
+import { withKnobs, select, boolean } from '@storybook/addon-knobs';
+import ChecTable from '../../components/ChecTable.vue';
 
 <Meta title="Styles/Tables" />
 
