--- a/src/stories/components/ChecTag.stories.mdx
+++ b/src/stories/components/ChecTag.stories.mdx
@@ -27,6 +27,9 @@ import ChecTagGroup from '../../components/ChecTagGroup';
           type: Boolean,
           default: () => boolean('Active', false),
         },
+        background: {
+          default: select('Background Color', ['light', 'dark']),
+        },
         disabled: {
           type: Boolean,
           default: () => boolean('Disabled', false),
@@ -40,7 +43,7 @@ import ChecTagGroup from '../../components/ChecTagGroup';
         handleDismiss: action('dismiss'),
       },
       template: `
-        <div class="mx-auto max-w-lg pt-6">
+        <div class="py-16 w-full flex justify-around" :class="{'bg-gray-600': background === 'dark'}">
           <ChecTag
             :color="color"
             :active="active"
@@ -50,6 +53,62 @@ import ChecTagGroup from '../../components/ChecTagGroup';
           >
             {{ tagText }}
           </ChecTag>
+        </div>`
+    }}
+  </Story>
+</Preview>
+
+# Tag
+
+<Props of={Tag} />
+
+<Preview>
+  <Story name="States">
+    {{
+      components: {
+        ChecTag,
+      },
+      props: {
+        tagText: {
+          default: text('Tag text', 'I am tag')
+        },
+        active: {
+          type: Boolean,
+          default: () => boolean('Active', false),
+        },
+        disabled: {
+          type: Boolean,
+          default: () => boolean('Disabled', false),
+        },
+        background: {
+          default: select('Background Color', ['light', 'dark']),
+        },
+        undismissible: {
+          type: Boolean,
+          default: () => boolean('Undismissible', false),
+        },
+      },
+      computed: {
+        colors() {
+          return ['light-grey', 'dark-grey', 'white'];
+        }
+      },
+      methods: {
+        handleDismiss: action('dismiss'),
+      },
+      template: `
+        <div class="py-16 w-full flex justify-around" :class="{'bg-gray-600': background === 'dark'}">
+          <div v-for="color in colors" class="mb-4">
+            <ChecTag
+              :color="color"
+              :active="active"
+              :disabled="disabled"
+              :undismissible="undismissible"
+              @dismiss="handleDismiss"
+            >
+              {{ tagText }}
+            </ChecTag>
+          </div>
         </div>`
     }}
   </Story>
