Fix broken "source" view in tag stories

--- a/src/stories/components/ChecTag.stories.mdx
+++ b/src/stories/components/ChecTag.stories.mdx
@@ -4,11 +4,11 @@ import { action } from '@storybook/addon-actions';
 import ChecTag from '../../components/ChecTag';
 import ChecTagGroup from '../../components/ChecTagGroup';
 
-<Meta title="Components/Tag" component={Tag} />
+<Meta title="Components/Tag" component={ChecTag} />
 
 # Tag
 
-<Props of={Tag} />
+<Props of={ChecTag} />
 
 <Preview>
   <Story name="Default">
@@ -60,7 +60,7 @@ import ChecTagGroup from '../../components/ChecTagGroup';
 
 # Tag
 
-<Props of={Tag} />
+<Props of={ChecTag} />
 
 <Preview>
   <Story name="States">
