--- a/src/stories/components/ChecTag.stories.mdx
+++ b/src/stories/components/ChecTag.stories.mdx
@@ -18,7 +18,7 @@ import ChecTagGroup from '../../components/ChecTagGroup';
       },
       props: {
         color: {
-          default: select('Color', ['dark-grey', 'white']),
+          default: select('Color', ['white', 'dark-grey']),
         },
         tagText: {
           default: text('Tag text', 'I am tag')
