Extract shared popover logic to popover component
Update the options menu and dropdown components to use new shared API provided by the popover componet
Add a story for the popover component

--- a/src/stories/components/ChecOptionsMenu.stories.mdx
+++ b/src/stories/components/ChecOptionsMenu.stories.mdx
@@ -45,7 +45,7 @@ import ChecOptionsMenu from '../../components/ChecOptionsMenu.vue';
       },
       template: `
         <div class="w-full h-screen bg-gray-200 flex items-center justify-around">
-          <ChecOptionsMenu :menu-placement="menuPlacement">
+          <ChecOptionsMenu :menu-placement="menuPlacement" prevent-toggle>
             <ChecOption @option-selected="action">
               Edit record
             </ChecOption>
