Ensure images that fail upload can be removed from image manager

--- a/src/stories/components/ChecImageUploader.stories.mdx
+++ b/src/stories/components/ChecImageUploader.stories.mdx
@@ -31,7 +31,7 @@ import ImageBlock from '@/components/ChecImageManager/ImageBlock';
           default: text('endpoint', 'https://httpbin.org/post'),
         },
         columns: {
-          default: select('Columns', [2, 4, 6]),
+          default: select('Columns', [2, 4, 6], 4),
         },
       },
       methods: {
