--- a/src/stories/styles/colors.stories.mdx
+++ b/src/stories/styles/colors.stories.mdx
@@ -9,7 +9,7 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
   <Story name="Colors - Marketing">
     {{
       data: () => ({
-        colors: ['primary-gradient', 'dark-blue', 'primary-blue', 'hologram', 'chec-gradient'],
+        colors: ['primary-gradient', 'dark-blue', 'primary-blue', 'hologram', 'hologram-light', 'chec-gradient'],
       }),
       template: `
         <div class="py-16 flex justify-center space-x-2">
