[CHEC-1160] Add ping highlight dot to navigation

--- a/src/stories/components/ChecNavigation.stories.mdx
+++ b/src/stories/components/ChecNavigation.stories.mdx
@@ -66,6 +66,7 @@ the order of the "tree" that it is given
             {
               label: 'Products',
               icon: 'products',
+              ping: true,
               links: [
                 {
                   label: 'Products',
